--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A module for creating a SlackBot in Node",
   "license": "MIT",
   "author": {
-    "name" : "Stephen Cavaliere",
-    "email" : "stephencavaliere@gmail.com"
+    "name": "Stephen Cavaliere",
+    "email": "stephencavaliere@gmail.com"
   },
   "homepage": "https://github.com/delasteve/slackbot",
   "bugs": {
@@ -16,7 +16,8 @@
     "url": "https://github.com/delasteve/slackbot.git"
   },
   "scripts": {
-    "test": "./node_modules/.bin/eslint . && ./node_modules/.bin/mocha --recursive test/"
+    "test": "eslint . && mocha --recursive test/",
+    "coverage": "nyc mocha test/ --recursive && nyc report --reporter=text-lcov | coveralls"
   },
   "dependencies": {
     "slack": "6.0.0"
@@ -27,10 +28,12 @@
     "babel-eslint": "4.1.8",
     "chai": "3.5.0",
     "chai-as-promised": "5.2.0",
+    "coveralls": "2.11.6",
     "dotenv": "2.0.0",
     "eslint": "2.0.0",
     "eslint-plugin-mocha": "2.0.0",
     "mocha": "2.4.5",
+    "nyc": "5.6.0",
     "sinon": "1.17.3",
     "sinon-chai": "2.8.0"
   }
