--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "slackbot",
+  "name": "slackbotjs",
   "version": "0.0.0",
   "description": "A module for creating a SlackBot in Node",
   "license": "MIT",
@@ -23,19 +23,19 @@
     "coverage": "nyc mocha test/ --recursive && nyc report --reporter=text-lcov | coveralls"
   },
   "dependencies": {
-    "slack": "6.0.0"
+    "slack": "6.1.0"
   },
   "devDependencies": {
-    "babel-core": "6.5.2",
+    "babel-core": "6.7.2",
     "babel-eslint": "5.0.0",
-    "babel-preset-es2015": "6.5.0",
+    "babel-preset-es2015": "6.6.0",
     "chai": "3.5.0",
     "chai-as-promised": "5.2.0",
-    "coveralls": "2.11.6",
-    "eslint": "2.2.0",
+    "coveralls": "2.11.8",
+    "eslint": "2.4.0",
     "eslint-plugin-mocha": "2.0.0",
     "mocha": "2.4.5",
-    "nyc": "5.6.0",
+    "nyc": "6.0.0",
     "sinon": "1.17.3",
     "sinon-chai": "2.8.0"
   }
