--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "slackbotjs",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "A module for creating a SlackBot in Node",
   "license": "MIT",
   "author": {
@@ -15,17 +15,20 @@
     "type": "git",
     "url": "https://github.com/delasteve/slackbot.git"
   },
+  "main": "lib/slackbot.js",
   "scripts": {
     "lint": "eslint .",
     "pretest": "npm run lint",
     "test": "mocha --recursive test/",
     "test-watch": "mocha -w --recursive test",
-    "coverage": "nyc mocha test/ --recursive && nyc report --reporter=text-lcov | coveralls"
+    "coverage": "nyc mocha test/ --recursive && nyc report --reporter=text-lcov | coveralls",
+    "prepublish": "babel src --out-dir lib"
   },
   "dependencies": {
     "slack": "6.1.0"
   },
   "devDependencies": {
+    "babel-cli": "6.6.5",
     "babel-core": "6.7.2",
     "babel-eslint": "5.0.0",
     "babel-preset-es2015": "6.6.0",
